feat: change plan property, typography for app

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/coffwok-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Coffwok</title>
+    <title>Coffwok | Tìm bạn đi cafe-học bài tại Quy Nhơn</title>
+    <meta name="description" content="Bạn sống ở Quy Nhơn và yêu thích học bài tại quán Cà phê ? Đừng đi một mình : ) Tìm bạn đi cà phê học bài chung ngay hôm nay. Tạo mối quan hệ, cùng nhau học các môn bạn yêu thích tại các quán Cà phê như: Glife, E-coffee, ... "/>
   </head>
   <body>
     <div id="root"></div>
